--- a/charts/admission-controller/Chart.yaml
+++ b/charts/admission-controller/Chart.yaml
@@ -9,6 +9,8 @@ icon: https://avatars.githubusercontent.com/u/5068817?s=200&v=4
 maintainers:
   - name: giuse-sysdig
     email: giuseppe.esposito@sysdig.com
+  - name: hayk
+    email: hayk.kocharyan@sysdig.com
 dependencies:
   - name: common
     # repository: https://charts.sysdig.com
