--- a/charts/admission-controller/Chart.yaml
+++ b/charts/admission-controller/Chart.yaml
@@ -2,13 +2,15 @@ apiVersion: v2
 name: admission-controller
 description: Sysdig Admission Controller using Sysdig Secure inline image scanner
 type: application
-version: 0.13.1
+version: 0.13.2
 appVersion: 3.9.26
 home: https://sysdiglabs.github.io/admission-controller/
 icon: https://avatars.githubusercontent.com/u/5068817?s=200&v=4
 maintainers:
   - name: giuse-sysdig
     email: giuseppe.esposito@sysdig.com
+  - name: hayk
+    email: hayk.kocharyan@sysdig.com
 dependencies:
   - name: common
     # repository: https://charts.sysdig.com
