--- a/charts/admission-controller/tests/configmap_test.yaml
+++ b/charts/admission-controller/tests/configmap_test.yaml
@@ -32,7 +32,7 @@ tests:
           path: rules[1]
           content:
             apiGroups: [""]
-            resources: ["pods", "configmaps"]
+            resources: ["pods", "configmaps", "secrets"]
             verbs: ["get"]
         template: templates/webhook/clusterrole.yaml
   - it: Does not create the configmap if webhook.acConfig is not present
