--- a/charts/admission-controller/templates/webhook/admissionregistration.yaml
+++ b/charts/admission-controller/templates/webhook/admissionregistration.yaml
@@ -4,115 +4,27 @@ so the template is executed just once
  */}}
 {{- $certString := include "admissionController.webhook.gen-certs" . -}}
 {{- $certList := split "$" $certString -}}
+
 ---
 {{- $existingVac := (lookup "admissionregistration.k8s.io/v1" "ValidatingWebhookConfiguration" (include "admissionController.namespace" .) (include "admissionController.webhook.fullname" .))}}
 {{- $existingVacMetadataAnnotations := (default dict (default dict $existingVac.metadata).annotations) }}
 {{- $existingVacMetadataAnnotationsReleaseName := (default "" (index $existingVacMetadataAnnotations "meta.helm.sh/release-name")) }}
 {{- $existingVacMetadataAnnotationsReleaseNamespace := (default "" (index $existingVacMetadataAnnotations "meta.helm.sh/release-namespace")) }}
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingWebhookConfiguration
+metadata:
+  name: {{ include "admissionController.webhook.fullname" . }}
+  namespace: {{ include "admissionController.namespace" . }}
 {{- if (or (not $existingVac) (and $existingVac (eq $existingVacMetadataAnnotationsReleaseName .Release.Name ) (eq $existingVacMetadataAnnotationsReleaseNamespace .Release.Namespace ))) }}
-apiVersion: admissionregistration.k8s.io/v1
-kind: ValidatingWebhookConfiguration
-metadata:
-  name: {{ include "admissionController.webhook.fullname" . }}
-  namespace: {{ include "admissionController.namespace" . }}
-webhooks: []
-{{- end}}
----
-apiVersion: admissionregistration.k8s.io/v1
-kind: ValidatingWebhookConfiguration
-metadata:
-  name: {{ include "admissionController.webhook.fullname" . }}
-  namespace: {{ include "admissionController.namespace" . }}
+{{- include "admissionController.webhookTemplate"  (merge (dict "Cert" $certList._2) . ) }}
+{{- else }}
   annotations:
     "helm.sh/hook": "post-install, post-upgrade"
     meta.helm.sh/release-name: {{ .Release.Name }}
     meta.helm.sh/release-namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/managed-by: Helm
-webhooks:
-{{- if .Values.features.kspmAdmissionController}}
-- name: vac.secure.sysdig.com
-  rules:
-  - apiGroups:
-    - ""
-    - apps
-    - batch
-    apiVersions: ["v1"]
-    operations: ["CREATE", "UPDATE"]
-    resources:
-    - "deployments"
-    - "replicasets"
-    - "statefulsets"
-    - "daemonsets"
-    - "jobs"
-    - "cronjobs"
-    scope: "Namespaced"
-  clientConfig:
-    service:
-      namespace: {{ include "admissionController.namespace" . }}
-      name: {{ include "admissionController.webhook.fullname" . }}
-      path: /validate
-      port:  {{ .Values.webhook.v2.service.port }}
-    caBundle: {{ $certList._2 }}
-
-  admissionReviewVersions: ["v1", "v1beta1"]
-  sideEffects: None
-  timeoutSeconds: {{ .Values.webhook.v2.timeoutSeconds }}
-  failurePolicy: Ignore
-{{- end }}
-{{- if or .Values.scanner.enabled .Values.webhook.acConfig }}
-- name: scanning.secure.sysdig.com
-  matchPolicy: Equivalent
-  rules:
-  - apiGroups:
-    - ""
-    - apps
-    - batch
-    apiVersions: ["v1"]
-    operations: ["CREATE", "UPDATE"]
-    resources:
-    - "pods"
-    - "deployments"
-    - "replicasets"
-    - "statefulsets"
-    - "daemonsets"
-    - "jobs"
-    - "cronjobs"
-    scope: "*"
-  clientConfig:
-    service:
-      namespace: {{ include "admissionController.namespace" . }}
-      name: {{ include "admissionController.webhook.fullname" . }}
-      path: /allow-pod
-      port:  {{ .Values.webhook.service.port }}
-    caBundle: {{ $certList._2 }}
-  admissionReviewVersions: ["v1", "v1beta1"]
-  sideEffects: None
-  timeoutSeconds: {{ .Values.webhook.timeoutSeconds }}
-  {{- if .Values.webhook.denyOnError }}
-  failurePolicy: Fail
-  {{- else }}
-  failurePolicy: Ignore
-  {{- end }}
-{{- end }}
-{{- if .Values.features.k8sAuditDetections }}
-- name: audit.secure.sysdig.com
-  matchPolicy: Equivalent
-  rules:
-  {{- with .Values.features.k8sAuditDetectionsRules }}
-    {{- toYaml . | nindent 2 }}
-  {{- end }}
-  clientConfig:
-    service:
-      namespace: {{ include "admissionController.namespace" . }}
-      name: {{ include "admissionController.webhook.fullname" . }}
-      path: /k8s-audit
-      port:  {{ .Values.webhook.service.port }}
-    caBundle: {{ $certList._2 }}
-  admissionReviewVersions: ["v1", "v1beta1"]
-  sideEffects: None
-  timeoutSeconds: {{ .Values.webhook.timeoutSeconds }}
-  failurePolicy: Ignore
+{{- include "admissionController.webhookTemplate"  (merge (dict "Cert" $certList._2) . ) }}
 {{- end }}
 ---
 apiVersion: v1
