test: add configmap test

--- a/charts/admission-controller/tests/configmap_test.yaml
+++ b/charts/admission-controller/tests/configmap_test.yaml
@@ -1,7 +1,5 @@
 suite: Test admissioncontrollerconfigmap
 templates:
-  - templates/webhook/admissioncontrollerconfigmap.yaml
-  - templates/webhook/clusterrole.yaml
   - templates/webhook/configmap.yaml
 tests:
   - it: Creates the configmap if webhook.acConfig is present
@@ -9,7 +7,7 @@ tests:
       clusterName: test-k8s
       webhook:
         workers:
-          policies:
+          scanningPolicies:
             - one
             - two
     asserts:
@@ -20,56 +18,5 @@ tests:
       - isSubset:
           path: data
           content:
-            POLICIES: '["one", "two"]'
+            POLICIES: '["one","two"]'
           template: templates/webhook/configmap.yaml
-  - it: Creates the configmap if webhook.acConfig is present
-    set:
-      webhook:
-        acConfig: |
-          foo: bar
-          fizz: buzz
-    asserts:
-      - containsDocument:
-          kind: ConfigMap
-          apiVersion: v1
-        template: templates/webhook/admissioncontrollerconfigmap.yaml
-  - it: Creates the clusterrole if webhook.acConfig is present
-    set:
-      webhook:
-        acConfig: |
-          foo: bar
-          fizz: buzz
-    asserts:
-      - isSubset:
-          path: rules[2]
-          content:
-            apiGroups: [ "batch" ]
-            resources: [ "jobs" ]
-            verbs: [ "create", "get", "delete", "watch" ]
-        template: templates/webhook/clusterrole.yaml
-      - isSubset:
-          path: rules[1]
-          content:
-            apiGroups: [ "" ]
-            resources: [ "pods", "configmaps", "secrets" ]
-            verbs: [ "get" ]
-        template: templates/webhook/clusterrole.yaml
-  - it: Does not create the configmap if webhook.acConfig is not present
-    set: { }
-    asserts:
-      - notContains:
-          path: rules
-          content:
-            apiGroups: [ "batch" ]
-        template: templates/webhook/clusterrole.yaml
-      - isSubset:
-          path: rules[1]
-          content:
-            apiGroups: [""]
-            resources: ["pods"]
-            verbs: ["get"]
-        template: templates/webhook/clusterrole.yaml
-#    asserts:
-#      - isNullOrEmpty:
-#          path: data
-#        template: templates/webhook/admissioncontrollerconfigmap.yaml
