--- a/charts/kspm-collector/tests/agent_tags_test.yaml
+++ b/charts/kspm-collector/tests/agent_tags_test.yaml
@@ -18,33 +18,36 @@ tests:
             name: TAGS
             value: tag:value
         template: deployment.yaml
-#  - it: Check agent tags are set from agent.sysdig.settings.tags
-#    set:
-#      clusterName: "test-k8s"
-#      sysdig:
-#        accessKey: standard-key
-#        secureAPIToken: standard-token
-#      agent:
-#        sysdig:
-#          settings:
-#            tags: tag:value
-#    asserts:
-#      - equal:
-#          path: spec.template.spec.containers[0].env
-#          content:
-#            name: TAGS
-#            value: tag:value
-#        template: deployment.yaml
-#  - it: Check agent tags are not set
-#    set:
-#      clusterName: "test-k8s"
-#      sysdig:
-#        accessKey: standard-key
-#        secureAPIToken: standard-token
-#    asserts:
-#      - notExists:
-#          path: spec.template.spec.containers[0].env
-#          content:
-#            name: TAGS
-#            value: tag:value
-#        template: deployment.yaml
+  - it: Check agent tags are set from agent.sysdig.settings.tags
+    set:
+      clusterName: "test-k8s"
+      sysdig:
+        accessKey: standard-key
+        secureAPIToken: standard-token
+      agent:
+        sysdig:
+          settings:
+            tags: tag:value
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: TAGS
+            value: tag:value
+        template: deployment.yaml
+  - it: Check agent tags are not set
+    set:
+      clusterName: "test-k8s"
+      sysdig:
+        accessKey: standard-key
+        secureAPIToken: standard-token
+      agent:
+        sysdig:
+          settings: {}
+    asserts:
+      - notContains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: TAGS
+            value: tag:value
+        template: deployment.yaml
