--- a/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
@@ -237,9 +237,9 @@ spec:
                 name: {{ .Release.Name }}-kspm-analyzer
                 key: agent_port
                 optional: true
-          {{- if ne (include "agent.tags" .) "" }}
+          {{- if and (hasKey .Values.global "settings") (hasKey .Values.global.settings "tags") }}
           - name: TAGS
-            value: {{ include "agent.tags" . }}
+            value: {{ .Values.global.settings.tags }}
           {{- end }}
           {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.nodeAnalyzer.ssl)) "true" }}
           - name: SSL_CERT_FILE
