--- a/charts/cluster-scanner/tests/deployment_test.yaml
+++ b/charts/cluster-scanner/tests/deployment_test.yaml
@@ -214,7 +214,7 @@ tests:
       - failedTemplate:
           errorMessage: "incompatible version for runtimeStatusIntegrator.image.tag, set 4.3.4 expected < 1.0.0"
 
-  - it: "fails if the onPremCompatibilityVersion is not set to 6.2 the imageSbomExtractor version is incorrect"
+  - it: "fails if the onPremCompatibilityVersion is set to 6.2 and the imageSbomExtractor version is incorrect"
     templates:
       - ../templates/deployment.yaml
     set:
@@ -230,17 +230,61 @@ tests:
       - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: "6.3"
+      runtimeStatusIntegrator.image.tag: "4.3.4"
+      imageSbomExtractor.image.tag: "0.3.4"
+    asserts:
+      - failedTemplate:
+          errorMessage: "incompatible version for runtimeStatusIntegrator.image.tag, set 4.3.4 expected < 1.0.0"
+
+  - it: "fails if the onPremCompatibilityVersion is set to 6.3 and the imageSbomExtractor version is incorrect"
+    templates:
+      - ../templates/deployment.yaml
+    set:
+      onPremCompatibilityVersion: "6.3"
+      runtimeStatusIntegrator.image.tag: "0.0.1"
+      imageSbomExtractor.image.tag: "6.1.0"
+    asserts:
+      - failedTemplate:
+          errorMessage: "incompatible version for imageSbomExtractor.image.tag, set 6.1.0 expected < 1.0.0"
+
+  - it: "fails if the onPremCompatibilityVersion is set to 6.5 and the runtimeStatusIntegrator version is incorrect"
+    templates:
+      - ../templates/deployment.yaml
+    set:
+      onPremCompatibilityVersion: "6.5"
       runtimeStatusIntegrator.image.tag: "0.3.4"
       imageSbomExtractor.image.tag: "1.3.4"
     asserts:
       - failedTemplate:
           errorMessage: "incompatible version for runtimeStatusIntegrator.image.tag, set 0.3.4 expected >= 1.0.0"
 
-  - it: "fails if the onPremCompatibilityVersion is not set to 6.3 the imageSbomExtractor version is incorrect"
+  - it: "fails if the onPremCompatibilityVersion is set to 6.5 and the imageSbomExtractor version is incorrect"
     templates:
       - ../templates/deployment.yaml
     set:
-      onPremCompatibilityVersion: "6.3"
+      onPremCompatibilityVersion: "6.5"
+      runtimeStatusIntegrator.image.tag: "1.3.4"
+      imageSbomExtractor.image.tag: "0.1.0"
+    asserts:
+      - failedTemplate:
+          errorMessage: "incompatible version for imageSbomExtractor.image.tag, set 0.1.0 expected >= 1.0.0"
+
+  - it: "fails if the onPremCompatibilityVersion is set to 6.6 and the runtimeStatusIntegrator version is incorrect"
+    templates:
+      - ../templates/deployment.yaml
+    set:
+      onPremCompatibilityVersion: "6.6"
+      runtimeStatusIntegrator.image.tag: "0.3.4"
+      imageSbomExtractor.image.tag: "1.3.4"
+    asserts:
+      - failedTemplate:
+          errorMessage: "incompatible version for runtimeStatusIntegrator.image.tag, set 0.3.4 expected >= 1.0.0"
+
+  - it: "fails if the onPremCompatibilityVersion is set to 6.6 and the imageSbomExtractor version is incorrect"
+    templates:
+      - ../templates/deployment.yaml
+    set:
+      onPremCompatibilityVersion: "6.6"
       runtimeStatusIntegrator.image.tag: "1.3.4"
       imageSbomExtractor.image.tag: "0.1.0"
     asserts:
@@ -282,6 +326,21 @@ tests:
       - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: "6.3"
+      runtimeStatusIntegrator.image.tag: "0.3.4"
+      imageSbomExtractor.image.tag: "0.9.10"
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].image
+          value: quay.io/sysdig/runtime-status-integrator:0.3.4
+      - equal:
+          path: spec.template.spec.containers[1].image
+          value: quay.io/sysdig/image-sbom-extractor:0.9.10
+
+  - it: "succeeds if the onPremCompatibilityVersion is set to 6.5 and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
+    templates:
+      - ../templates/deployment.yaml
+    set:
+      onPremCompatibilityVersion: "6.5"
       runtimeStatusIntegrator.image.tag: "2.3.4"
       imageSbomExtractor.image.tag: "1.0.0"
     asserts:
@@ -292,11 +351,26 @@ tests:
           path: spec.template.spec.containers[1].image
           value: quay.io/sysdig/image-sbom-extractor:1.0.0
 
-  - it: "succeeds if the runtimeStatusIntegrator version is not a semver and the onPremCompatibilityVersion is 6.2"
+  - it: "succeeds if the onPremCompatibilityVersion is set to 6.6 and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
     templates:
       - ../templates/deployment.yaml
     set:
-      onPremCompatibilityVersion: "6.2"
+      onPremCompatibilityVersion: "6.6"
+      runtimeStatusIntegrator.image.tag: "2.3.4"
+      imageSbomExtractor.image.tag: "1.0.0"
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].image
+          value: quay.io/sysdig/runtime-status-integrator:2.3.4
+      - equal:
+          path: spec.template.spec.containers[1].image
+          value: quay.io/sysdig/image-sbom-extractor:1.0.0
+
+  - it: "succeeds if the runtimeStatusIntegrator version is not a semver and the onPremCompatibilityVersion is 6.4"
+    templates:
+      - ../templates/deployment.yaml
+    set:
+      onPremCompatibilityVersion: "6.4"
       runtimeStatusIntegrator.image.tag: "unstable-rc"
       imageSbomExtractor.image.tag: "0.9.0"
     asserts:
@@ -307,11 +381,11 @@ tests:
           path: spec.template.spec.containers[1].image
           value: quay.io/sysdig/image-sbom-extractor:0.9.0
 
-  - it: "succeeds if the imageSbomExtractor version is not a semver and the onPremCompatibilityVersion is 6.3"
+  - it: "succeeds if the imageSbomExtractor version is not a semver and the onPremCompatibilityVersion is 6.5"
     templates:
       - ../templates/deployment.yaml
     set:
-      onPremCompatibilityVersion: "6.3"
+      onPremCompatibilityVersion: "6.5"
       runtimeStatusIntegrator.image.tag: "1.3.5"
       imageSbomExtractor.image.tag: "3bc59a4958d15dfa6afed20dfd2459e268b4cda8"
     asserts:
