--- a/.github/workflows/approve-test-run.yaml
+++ b/.github/workflows/approve-test-run.yaml
@@ -9,7 +9,7 @@ jobs:
   approve-test-run:
     permissions:
       pull-requests: write
-    runs-on: ubuntu-latest
+    runs-on: tools-runner-small
     if: ${{ github.event.issue.pull_request }}
     steps:
       - name: Slash Command Dispatch
