chore: switch dispatch type from workflow to repository
change the trigger type from `workflow_dispatch` to `repository_dispatch`.
this solves two issues:
1) Calling the workflow from Jenkins is simpler and better documented
2) Guarantees that the workflows are always going to run against the `master` branch

--- a/.github/workflows/agent-release.yaml
+++ b/.github/workflows/agent-release.yaml
@@ -2,7 +2,8 @@
 name: Update charts for Agent release
 
 on:
-  workflow_dispatch:
+  repository_dispatch:
+    types: [agent-release]
 
 permissions:
   contents: read
