chore: rename agent release job to be consistent with other jobs

--- a/.github/workflows/agent-release.yaml
+++ b/.github/workflows/agent-release.yaml
@@ -10,7 +10,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  handleAgentRelease:
+  agent-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
