feat: change updatecli source back to dockerimage
still use the agent release version provided by the repository_dispatch
event, but leverage the `dockerimage` source type to validate that the
image exists and matches our expected release regex format before making
any changes

--- a/.github/updatecli.d/config-agent-release.yaml
+++ b/.github/updatecli.d/config-agent-release.yaml
@@ -13,13 +13,14 @@ scms:
       branch: "master"
 
 sources:
-  checkAgentReleaseEnv:
-    kind: shell
+  agentRelease:
+    kind: dockerimage
     spec:
-      command: echo $AGENT_RELEASE
-      environments:
-        - name: AGENT_RELEASE
-          value: '{{ requiredEnv "AGENT_RELEASE" }}'
+      image: quay.io/sysdig/agent
+      tagfilter: '{{ requiredEnv "AGENT_RELEASE" }}'
+      versionfilter:
+        kind: regex
+        pattern: '[0-9]+\.[0-9]+\.[0-9]+'
 
 targets:
   updateAgentChartValues:
