chore: migrate back to workflow_dispatch
a change of approach on the invocation side to use `gh` instead
of direct `curl` calls has allowed to migration back to
using `workflow_dispatch`

--- a/.github/workflows/agent-release.yaml
+++ b/.github/workflows/agent-release.yaml
@@ -2,8 +2,11 @@
 name: Update charts for Agent release
 
 on:
-  repository_dispatch:
-    types: [agent-release]
+  workflow_dispatch:
+    inputs:
+      release:
+        description: 'Agent Version'
+        required: true
 
 permissions:
   contents: read
@@ -22,5 +25,5 @@ jobs:
       - name: Run Updatecli in apply mode
         run: "updatecli apply --config .github/updatecli.d/config-agent-release.yaml"
         env:
-          AGENT_RELEASE: "${{ github.event.client_payload.release }}"
+          AGENT_RELEASE: "${{ inputs.release }}"
           GITHUB_TOKEN: "${{ secrets.TOOLS_JENKINS_ADMIN_ACCESS_GITHUB_TOKEN }}"
