--- a/charts/node-analyzer/tests/agent_tags_test.yaml
+++ b/charts/node-analyzer/tests/agent_tags_test.yaml
@@ -5,8 +5,9 @@ tests:
   - it: Check agent tags are set from global.settings.tags
     set:
       global:
-        settings:
-          tags: tag:value
+        sysdig:
+          tags:
+            tag: value
         kspm:
           deploy: true
     asserts:
