feat: support new env vars

--- a/charts/admission-controller/tests/configmap_test.yaml
+++ b/charts/admission-controller/tests/configmap_test.yaml
@@ -6,6 +6,8 @@ tests:
     set:
       clusterName: test-k8s
       webhook:
+        acConfig: |
+          test
         workers:
           scanningPolicies:
             - one
@@ -19,4 +21,59 @@ tests:
           path: data
           content:
             POLICIES: '["one","two"]'
+          template: templates/webhook/configmap.yaml
+      - isSubset:
+          path: data
+          content:
+            CACHE_FLUSH_PERIOD: "1h"
+          template: templates/webhook/configmap.yaml
+  - it: Created the configmap
+    set:
+      clusterName: test-k8s
+      webhook:
+        workers:
+          scanningPolicies:
+            - one
+            - two
+    asserts:
+        - containsDocument:
+            kind: ConfigMap
+            apiVersion: v1
+            template: templates/webhook/configmap.yaml
+        - isSubset:
+            path: data
+            content:
+              POLICIES: '["one","two"]'
+            template: templates/webhook/configmap.yaml
+        - notExists:
+            path: data.CACHE_FLUSH_PERIOD
+            template: templates/webhook/configmap.yaml
+  - it: Created the configmap with ac stop gap values
+    set:
+      clusterName: test-k8s
+      namespace: cocotero
+      webhook:
+        name: "webhook"
+        acConfig: |
+          test
+      serviceAccounts:
+        webhook:
+          # Creates the service account.
+          create: true
+          # The additional annotations for serviceAccount.
+          annotations: { }
+          # Use this value as serviceAccount Name.
+          name: "foobar"
+    asserts:
+      - containsDocument:
+          kind: ConfigMap
+          apiVersion: v1
+          template: templates/webhook/configmap.yaml
+      - isSubset:
+          path: data
+          content:
+            AC_NAMESPACE: "cocotero"
+            AC_SERVICE_ACCOUNT_NAME: "foobar"
+            WORKERS: "2"
+            WORKER_SKIPTLS: "true"
           template: templates/webhook/configmap.yaml
