--- a/charts/admission-controller/templates/webhook/configmap.yaml
+++ b/charts/admission-controller/templates/webhook/configmap.yaml
@@ -25,6 +25,11 @@ data:
   EXTERNAL_NATS_URL:  {{ include "admissionController.natsUrl" . }}
   NATS_INSECURE: "{{.Values.webhook.v2.nats.insecure}}"
   {{- end}}
+  {{- if .Values.webhook.acConfig }}
+  CACHE_FLUSH_PERIOD: "{{ .Values.webhook.cacheFlushPeriod | default "1h" }}"
+  AC_SERVICE_ACCOUNT_NAME: {{ include "admissionController.webhook.serviceAccountName" . }}
+  AC_NAMESPACE:  {{ include "admissionController.namespace" . }}
+  {{- end}}
   {{- if .Values.webhook.workers }}
   WORKERS: "{{.Values.webhook.workers.number | default 2 }}"
   WORKER_SKIPTLS: "{{.Values.webhook.workers.skiptlsverify | default "true" }}"
