--- a/charts/admission-controller/templates/webhook/configmap.yaml
+++ b/charts/admission-controller/templates/webhook/configmap.yaml
@@ -34,6 +34,8 @@ data:
   WORKERS: "{{.Values.webhook.workers.number | default 2 }}"
   WORKER_SKIPTLS: "{{.Values.webhook.workers.skiptlsverify | default "true" }}"
   POLICIES: {{ toJson .Values.webhook.workers.scanningPolicies | quote }}
+  TTL_SECONDS_AFTER_FINISHED: "{{.Values.webhook.workers.ttlSecondsAfterFinished | default 1000 }}"
+  ACTIVE_DEADLINE_SECONDS: "{{.Values.webhook.workers.activeDeadlineSeconds | default 2000 }}"
   {{- else }}
   WORKERS: "2"
   WORKER_SKIPTLS: "true"
