--- a/charts/admission-controller/templates/webhook/configmap.yaml
+++ b/charts/admission-controller/templates/webhook/configmap.yaml
@@ -34,6 +34,7 @@ data:
   WORKERS: "{{.Values.webhook.workers.number | default 2 }}"
   WORKER_SKIPTLS: "{{.Values.webhook.workers.skiptlsverify | default "true" }}"
   POLICIES: {{ toJson .Values.webhook.workers.scanningPolicies | quote }}
+  WORKER_MEMORY_LIMIT: "{{.Values.webhook.workers.memoryLimit | default "2Gi" }}"
   {{- else }}
   WORKERS: "2"
   WORKER_SKIPTLS: "true"
