--- a/.github/updatecli.d/config-agent-release.yaml
+++ b/.github/updatecli.d/config-agent-release.yaml
@@ -32,7 +32,7 @@ sources:
       tagfilter: '{{ requiredEnv "AGENT_RELEASE" }}'
       versionfilter:
         kind: regex
-        pattern: '[0-9]+\.[0-9]+\.[0-9]+'
+        pattern: '[0-9]+\.[0-9]+\.[0-9]+$'
 
 targets:
   updateAgentChartValues:
